[tool.poetry]
name = "bilingual-book-maker"
version = "0.1.0"
description = ""
authors = ["maoyang <my@esast.com>"]
readme = "README.md"
packages = [{include = "bilingual_book_maker"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
openai = "^0.27.0"
requests = "^2.28.2"
EbookLib = "^0.18"
rich = "^13.3.1"
streamlit = "^1.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
